--- a/Hyakuninisshu/Base.lproj/Main.storyboard
+++ b/Hyakuninisshu/Base.lproj/Main.storyboard
@@ -17,13 +17,88 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Gcs-Bg-4QB">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="MaterialTableViewCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MaterialTableViewCell" id="Gcs-Bg-4QB" customClass="MaterialTableViewCell" customModule="Hyakuninisshu" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="89"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Gcs-Bg-4QB" id="413-cq-S8K">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="89"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="6SZ-G9-pIr" userLabel="NoAndImage">
+                                            <rect key="frame" x="8" y="8" width="45" height="73"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="一番" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uti-tK-aED" userLabel="No">
+                                                    <rect key="frame" x="0.0" y="0.0" width="45" height="9"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="45" id="vzR-ky-1t4"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Karuta1" translatesAutoresizingMaskIntoConstraints="NO" id="6fb-Cm-969" userLabel="Karuta">
+                                                    <rect key="frame" x="0.0" y="13" width="45" height="60"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="45" id="fnP-4s-VPB"/>
+                                                        <constraint firstAttribute="height" constant="60" id="rgt-jg-nux"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="45" id="z7H-4I-8Pf"/>
+                                            </constraints>
+                                        </stackView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="秋の田の かりほの庵の 苫をあらみ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dpg-Ea-CdR" userLabel="ContentLine1">
+                                            <rect key="frame" x="61" y="19" width="325" height="16.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="16.5" id="T3G-Fr-vav"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="天智天皇" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fCC-v0-QGs" userLabel="Creator">
+                                            <rect key="frame" x="61" y="64" width="345" height="16.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="16.5" id="TND-1x-AvC"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="わが衣手は 露にぬれつつ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eEb-kZ-bdA" userLabel="ConetntLine2">
+                                            <rect key="frame" x="61" y="39.5" width="325" height="17"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="16.5" id="8kq-sq-4Dz"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="fCC-v0-QGs" secondAttribute="trailing" constant="8" id="0Br-8c-wEO"/>
+                                        <constraint firstItem="fCC-v0-QGs" firstAttribute="top" secondItem="eEb-kZ-bdA" secondAttribute="bottom" constant="8" id="4fa-LQ-z4t"/>
+                                        <constraint firstItem="eEb-kZ-bdA" firstAttribute="leading" secondItem="6SZ-G9-pIr" secondAttribute="trailing" constant="8" id="53L-lS-bcd"/>
+                                        <constraint firstItem="6SZ-G9-pIr" firstAttribute="top" secondItem="413-cq-S8K" secondAttribute="top" constant="8" id="F8T-gX-Ze4"/>
+                                        <constraint firstItem="6SZ-G9-pIr" firstAttribute="leading" secondItem="413-cq-S8K" secondAttribute="leading" constant="8" id="LLe-aE-VGi"/>
+                                        <constraint firstItem="eEb-kZ-bdA" firstAttribute="top" secondItem="Dpg-Ea-CdR" secondAttribute="bottom" constant="4" id="M5I-lc-N4A"/>
+                                        <constraint firstItem="Dpg-Ea-CdR" firstAttribute="leading" secondItem="6SZ-G9-pIr" secondAttribute="trailing" constant="8" id="PeI-Ax-GRi"/>
+                                        <constraint firstItem="Dpg-Ea-CdR" firstAttribute="top" secondItem="413-cq-S8K" secondAttribute="topMargin" constant="8" id="RPc-lQ-Mth"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="eEb-kZ-bdA" secondAttribute="trailing" constant="8" id="isz-Aq-GT7"/>
+                                        <constraint firstAttribute="bottom" secondItem="6SZ-G9-pIr" secondAttribute="bottom" constant="8" id="jef-vk-31g"/>
+                                        <constraint firstItem="fCC-v0-QGs" firstAttribute="leading" secondItem="6SZ-G9-pIr" secondAttribute="trailing" constant="8" id="lgd-kS-D6b"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Dpg-Ea-CdR" secondAttribute="trailing" constant="8" id="vSW-2o-hZR"/>
+                                        <constraint firstAttribute="bottom" secondItem="fCC-v0-QGs" secondAttribute="bottom" constant="8" id="wLw-il-JCm"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="KarutaImage" destination="6fb-Cm-969" id="duJ-rw-2PH"/>
+                                    <outlet property="contentLine1Label" destination="Dpg-Ea-CdR" id="2g5-EJ-UPW"/>
+                                    <outlet property="contentLine2Label" destination="eEb-kZ-bdA" id="0am-6K-igg"/>
+                                    <outlet property="creatorLabel" destination="fCC-v0-QGs" id="Vol-GT-6bA"/>
+                                    <outlet property="noLabel" destination="uti-tK-aED" id="BB7-td-8eS"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -31,12 +106,12 @@
                             <outlet property="delegate" destination="ggK-NR-fWs" id="JyU-Fv-dQN"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Item 3" id="6xo-FZ-afn"/>
+                    <tabBarItem key="tabBarItem" title="資料" image="book.closed" catalog="system" id="6xo-FZ-afn" userLabel="Material"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A76-8B-kth" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1248" y="852"/>
+            <point key="canvasLocation" x="1246.376811594203" y="851.78571428571422"/>
         </scene>
         <!--Item-->
         <scene sceneID="Oom-Ca-MT1">
@@ -109,6 +184,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Karuta1" width="150" height="209.5"/>
+        <image name="book.closed" catalog="system" width="115" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
